--- a/react-ssr/package.json
+++ b/react-ssr/package.json
@@ -20,6 +20,7 @@
     "koa-static": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "webpack": "^5.43.0",
     "webpack-cli": "^4.7.2",
     "webpack-node-externals": "^3.0.0"
