--- a/react-ssr/package.json
+++ b/react-ssr/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "concurrently": "^6.2.0",
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.3.2",
@@ -21,6 +22,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "webpack": "^5.43.0",
     "webpack-cli": "^4.7.2",
     "webpack-node-externals": "^3.0.0"
